# VariantExplain

./: .gitignore  README.md  dev.sh  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/data/: truncated.vcf
backend/src/: agent.py  models.py  rag.py  server.py  vep.py
frontend/: orval.config.ts  package-lock.json  package.json  watch-orval.helper.ts
frontend/src/: app.css
frontend/src/clients/: clients.ts
frontend/src/lib/components/: VCFFileUpload.svelte
frontend/src/lib/states/: fileState.svelte.ts  progressState.svelte.ts
frontend/src/routes/: +page.svelte
src/: agent.py  annotation.json  embeddings.py  main.py  models.py  parse.py  rag.py  test.vcf  vep.py
testing_data/: example_before_summary.txt  example_gwas_json_data.txt
